--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+tests_output
 
 # local env files
 .env.local
@@ -10,6 +11,9 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+chromedriver.log
+geckodriver.log
+
 
 # Editor directories and files
 .idea
