--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "test": "nightwatch"
   },
   "dependencies": {
     "core-js": "^3.6.4",
     "nightwatch": "^1.3.4",
+    "chromedriver": "^80.0.1",
+    "geckodriver": "^1.19.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
