deploy with npm command and env vars

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "nightwatch"
+    "test": "nightwatch",
+    "deploy": "$JBOSS_HOME/bin/jboss-cli.sh -c --command='deploy ${env.WORKSPACE}/workspace/jenkins-containerization/dist/monster-slayer.war'"
   },
   "dependencies": {
     "chromedriver": "^80.0.1",
