--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test": "nightwatch"
+    "testAll": "nightwatch -e headlessFirefox,ie"
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "nightwatch": "^1.3.4",
-    "chromedriver": "^80.0.1",
     "geckodriver": "^1.19.1",
+    "nightwatch": "^1.3.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -22,6 +21,8 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "iedriver": "^3.14.1",
+    "selenium-server": "^3.141.59",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
