--- a/package.json
+++ b/package.json
@@ -4,18 +4,17 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && ./copyToWar.sh",
     "lint": "vue-cli-service lint",
     "test": "nightwatch",
-    "deploy": "sudo $JBOSS_HOME/bin/jboss-cli.sh -c --command='deploy ./dist/monster-slayer.war --force'"
+    "deploy": "sudo $JBOSS_HOME/bin/jboss-cli.sh -c --command='deploy ./build/monster-slayer.war --force'"
   },
   "dependencies": {
     "chromedriver": "^80.0.1",
     "core-js": "^3.6.4",
     "geckodriver": "^1.19.1",
     "nightwatch": "^1.3.4",
-    "vue": "^2.6.11",
-    "webpack-war-plugin": "^1.0.0-beta.3"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
