--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "sudo $JBOSS_HOME/bin/jboss-cli.sh -c --command='deploy ./dist/monster-slayer.war --force'"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "chromedriver": "^80.0.1",
     "core-js": "^3.6.4",
     "geckodriver": "^1.19.1",
